# extest

./: INSTRUCOES.md  README.md  pyproject.toml
.exercicio_zero/: configure  project
features/: listas.feature
features/steps/: listas.py
src/: zero.py
